--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
+    border: 1px solid ;
 }
 
 h1{
@@ -50,7 +51,9 @@ input{
     color: white;
     transition: .5s;
 }
-
+.again{
+    display: none;
+}
 .text{
     margin-top: 2rem ;
     text-align: center;
