--- a/style.css
+++ b/style.css
@@ -1,87 +1,212 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+body {
+  height: 100vh;
+}
 
-body{
-    height: 100vh;
+.container {
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUT9-_mOuLr0R61adtgh6lxVbJKvOSrFuN4A&usqp=CAU");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid;
+}
+
+h1 {
+  margin-top: 2rem;
+  text-align: center;
+  background-color: gray;
+  margin-bottom: 5px;
+  padding: 10px;
+  border-radius: 20px;
+  border: 2px solid;
+  box-shadow: 0px 0px 10px black, inset 0px 0px 10px black;
+  opacity: 0.9;
+}
+h2 {
+  background-color: gray;
+  text-align: center;
+  padding: 5px 0px;
+  border-radius: 20px;
+  border: 2px solid;
+  box-shadow: 0px 0px 10px black, inset 0px 0px 10px black;
+  opacity: 0.9;
+}
+.input-div {
+  margin-top: 1rem;
+}
+
+input {
+  width: 100px;
+  padding: 0.5rem;
+  border: none;
+  background-color: rgb(110, 107, 105);
+  border-radius: 20px;
+  border: 2px solid;
+  box-shadow: 0px 0px 10px black, inset 0px 0px 10px black;
+  opacity: 0.9;
+  text-align: center;
+}
+.btn {
+  padding: 0.5rem;
+  font-weight: bold;
+  background-color: orangered;
+  border: none;
+  text-transform: uppercase;
+  border-radius: 20px;
+  cursor: pointer;
+}
+.btn:hover {
+  transform: scale(95%);
+  color: white;
+  transition: 0.5s;
+}
+.again {
+  display: none;
+}
+.text {
+  margin-top: 2rem;
+  text-align: center;
+  font-size: 2rem;
+  color: black;
+  font-weight: bold;
+  border: 1px solid;
+  border-radius: 10px;
+  background-color: gray;
+  filter: blur(0.3px);
+  opacity: 0.9;
+ 
+ 
+
+}
+.text2 {
+  display: none;
+  margin-top: 1rem;
+  text-align: center;
+  font-size: 2rem;
+  color: black;
+  font-weight: bold;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: gray;
+  filter: blur(0.3px);
+  opacity: 0.8;
+  padding: 10px;
+}
+.score {
+  padding: 10px;
+  border-radius: 20px;
+  border: 2px solid;
+  box-shadow: 0px 0px 10px black, inset 0px 0px 10px black;
+  opacity: 0.9;
+  font-size: 20px;
+  background-color: grey;
+  margin-bottom: 50px;
+}
+@media screen and (max-width: 650px) {
+    h1 {
+      margin: 0.5rem 0;
+      font-size: 1.7rem;
+    }
     
-}
-
-.container{
-    background-image: url("https://picsum.photos/id/96/600/400");
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid ;
-}
-
-h1{
-    margin-top:2rem ;
-    text-align: center;
-}
-.input-div{
-    margin-top: 1rem;
-}
-
-input{
-    width: 100px;
-    padding: .5rem;
-    border: none;
-    background-color: rgb(110, 107, 105);
-}
-.btn{
-    padding: .5rem;
-    font-weight:bold ;
-    background-color: orangered;
-    border: none;
-    text-transform: uppercase;
-    border-radius: 20px;
-    cursor: pointer;
-}
-.btn:hover{
-    transform: scale(95%);
-    color: white;
-    transition: .5s;
-}
-.again{
-    display: none;
-}
-.text{
-    margin-top: 2rem ;
-    text-align: center;
-    font-size: 2rem;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    border: 1px solid rgb(255, 255, 255);
-    border-radius: 10px;
-    background-color: transparent;
-    filter: blur(.3px);
-    opacity: .8;
-    padding: 10px;
+    .input-div {
+      margin: 1rem 0;
+      flex-direction: column;
+      gap: .8rem;
+    }
+  
+    .text, .text2 {
+      margin-top: 1.5rem;
+      font-size: 1.2rem;
+    }
+  
+    .score-div {
+      margin-top: 1.5rem;
+      
+    }
     
-   
-
-}
-.text2{
-    display: none;
-    margin-top: 2rem ;
-    text-align: center;
-    font-size: 2rem;
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    border: 1px solid rgb(255, 255, 255);
-    border-radius: 10px;
-    background-color: transparent;
-    filter: blur(.3px);
-    opacity: .8;
-    padding: 10px;
-
-}
+    .score {
+      font-weight: bold;
+      font-size: 1.3rem;
+    }
+  
+  } 
+  
+  @media screen and (max-width: 350px) {
+    h1 {
+      font-size: 1.2rem;
+      margin-bottom: 0;
+    }
+  
+    .input-div {
+      margin: 0rem;
+      gap: .5rem;
+    }
+  
+    .input {
+      width: 150px;
+      padding: 0.3rem 10px;
+      font-size: .7rem;
+    }
+  
+    .btn {
+      padding: 0.3rem;
+      font-size: .7rem;
+    }
+  
+    .text, .text2 {
+      margin: 0.2rem 0;
+      font-size: .9rem;
+    }
+  
+    .text { 
+      padding: .2rem;  
+    }
+  
+    .score-div {
+      margin-top: 0rem;
+    }
+    
+    .score {
+      font-size: .9rem;
+    }
+  }
+  
+  @media screen and (max-width: 180px) {
+    h1 {
+      font-size: .6rem;
+      padding: 1px;
+    }
+    h2{
+        font-size: .6rem;
+        padding: 1px;
+    }
+    .input {
+      width: 50px;
+      padding: 0.3rem 10px;
+      font-size: .5rem;
+    }
+    .btn {
+      padding: 0.3rem;
+      font-size: .5rem;
+    }
+    .text, .text2 {
+      font-size: .5rem;
+      padding: 3px;
+    
+    }
+    .score {
+      font-size: .5rem;
+      margin-bottom: 10px;
+      padding: 5px;
+    }
+  }
